Header & Footer in JS OOP gemaakt

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -64,7 +65,7 @@
 
     </main>
     <footer class="footer">
-        <h4 class="footer_h4">Gemaakt door Nick van der Tol SD2D Mediacollege</h4>
+        <h4 class="footer__h4">Gemaakt door Nick van der Tol SD2D Mediacollege</h4>
     </footer>
 </body>
 </html>
