Website in OOP gemaakt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/main.js" defer></script>
 </head>
 <body>
-    <header class="header">
+  <!-- <header class="header">
         <figure class="header__logo">
             <i class="fa-solid fa-microphone-lines"></i>
             <p class="header__tekst">Collection of Happiness</p>
@@ -66,6 +66,6 @@
     </main>
     <footer class="footer">
         <h4 class="footer__h4">Gemaakt door Nick van der Tol SD2D Mediacollege</h4>
-    </footer>
+    </footer> --> 
 </body>
 </html>
