audio object toegevoegd

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/main.js" defer></script>
 </head>
 <body>
-  <!-- <header class="header">
+   <!-- <header class="header">
         <figure class="header__logo">
             <i class="fa-solid fa-microphone-lines"></i>
             <p class="header__tekst">Collection of Happiness</p>
@@ -56,7 +56,7 @@
                 </li>
                 <li class="rightul__li">
                     <figure class="rightul__li--figure">
-                        <button class="rightul__li--downloadButton">Audio object ></button>
+                        <audio class="rightul__li--audio" controls src=""></audio>
                         <a class="rightul__li--source" href="">Source ></a>
                     </figure>
                 </li>
@@ -67,5 +67,6 @@
     <footer class="footer">
         <h4 class="footer__h4">Gemaakt door Nick van der Tol SD2D Mediacollege</h4>
     </footer> --> 
+    
 </body>
 </html>
